Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Youtube-comments-sort.github.io : youtube sort comments" />
+    <meta name="description" content="youtube-comments-sort : youtube sort comments" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Youtube-comments-sort.github.io</title>
+    <title>youtube-comments-sort</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/ChelFeb/youtubeCommentsSort.github.io">View on GitHub</a>
 
-          <h1 id="project_title">Youtube-comments-sort.github.io</h1>
+          <h1 id="project_title">youtube-comments-sort</h1>
           <h2 id="project_tagline">youtube sort comments</h2>
 
             <section id="downloads">
@@ -38,7 +38,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Youtube-comments-sort.github.io maintained by <a href="https://github.com/ChelFeb">ChelFeb</a></p>
+        <p class="copyright">youtube-comments-sort maintained by <a href="https://github.com/ChelFeb">ChelFeb</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
