--- a/index.html
+++ b/index.html
@@ -3,47 +3,24 @@
 
   <head>
     <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="youtube-comments-sort : youtube sort comments" />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+   	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+ 	<script src="http://code.jquery.com/jquery-migrate-1.1.0.js"></script>
+ 	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	<script type="text/javascript" scr="js/main.js"></script>
 
     <title>youtube-comments-sort</title>
   </head>
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ChelFeb/youtubeCommentsSort">View on GitHub</a>
-
-          <h1 id="project_title">youtube-comments-sort</h1>
-          <h2 id="project_tagline">youtube sort comments</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/ChelFeb/youtubeCommentsSort/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/ChelFeb/youtubeCommentsSort/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <p>Hello</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">youtube-comments-sort maintained by <a href="https://github.com/ChelFeb">ChelFeb</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
+	<div class="container">
+		<h4>You are welcome</h4>
+	</div>    
 
   </body>
 </html>
