--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
   <head>
     <meta charset='utf-8' />
-   	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
- 	<script src="http://code.jquery.com/jquery-migrate-1.1.0.js"></script>
+   	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
  	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 	<!-- Optional theme -->
